# OS-project

./: CMakeLists.txt  README.md  main.cpp
Process-dir/: MakeFile  Process.cpp  Process.h  child_socket  demo_socket_test  test_process  test_shared_semaphore
Process-dir/include/: IPC.h  Pipe.h  Process.h  SharedMemoryChannel.h  SharedSemaphore.h  SocketChannel.h
Process-dir/src/: Pipe.cpp  Process.cpp  SharedMemoryChannel.cpp  SharedSemaphore.cpp  SocketChannel.cpp
Process-dir/tests/: child.cpp  child_SSM.cpp  child_socket.cpp  demo_fd_test.cpp  demo_socket_test.cpp  demo_test_smm.cpp  final_tests_shared_memmory.cpp  final_tests_shared_symophore.cpp  full_shared_semaphore_test.cpp  test_child_shared  test_child_shared.cpp  test_pipe.cpp  test_process.cpp  test_process_shared  test_process_shared.cpp
documentation/: CMakeLists.txt  ProcessPOSIX.cpp  ProcessWIN.cpp  SharedMemoryPOSIX.cpp  SharedMemoryWIN.cpp  SharedSemaphorePOSIX.cpp  SharedSemaphoreWIN.cpp  pipePOSIX.cpp  pipeWIN.cpp  socketPOSIX.cpp  socketWIN.cpp
