cmake_minimum_required(VERSION 3.15)
project(TestApp)
set(CMAKE_CXX_STANDARD 20)
add_executable(my_app main.cpp)
find_path(PROCESS_INCLUDE_DIR Process.h)
find_library(PROCESS_LIB Process)
if (NOT PROCESS_INCLUDE_DIR OR NOT PROCESS_LIB)
    message(FATAL_ERROR "Could not find Process library! Make sure CMAKE_PREFIX_PATH is correct.")
endif()
target_include_directories(my_app PRIVATE ${PROCESS_INCLUDE_DIR})
target_link_libraries(my_app PRIVATE ${PROCESS_LIB})